--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 						</li>
 						<li class="timeline-inverted">
 							<div class="timeline-image">
-								<a href="#portfolioKambo" class="portfolio-link" data-toggle="modal"><img class="img-circle img-responsive" src="img/rituais/kambo_icon.jpg" alt=""></a>
+								<a href="#portfolioKambo" class="portfolio-link" data-toggle="modal"><img class="img-circle img-responsive" src="img/rituais/kambo/kambo_icon.jpg" alt=""></a>
 							</div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -879,10 +879,11 @@
 							<!-- Project Details Go Here -->
 							<h2>Kambô</h2>
 							<p class="item-intro text-muted">A técnica do Kambô é uma técnica indígena para tratamento de doenças.</p>
-							<img class="img-responsive img-centered" src="img/rituais/kambo_vacina.jpg" alt="">
+							<img class="img-responsive img-centered" src="img/rituais/kambo/kambo_vacina.jpg" alt="">
 							<p>O kambô é uma resina retirada de uma perereca que vive na Amazônia, a Phillomedusa bicolor.</p>
 							<p>Essa resina contém peptídeos analgésicos e de fortalecimento do sistema imunológico que provocam a destruição de microrganismos patogênicos.</p>
 							<p>E ela é usada como se fosse uma vacina por nativos da Amazônia.</p>
+							<img class="img-responsive img-centered" src="img/rituais/kambo/kambo_aplicacao.png" alt="">
 							<p>A aplicação é realizada sobre a pele e transportada rapidamente para todo o corpo pelos vasos linfáticos.</p>
 							<p>Os índios indicam a vacina para qualquer distúrbio e desequilíbrio, afirmam que purifica o sangue eliminando as impurezas, mas quem não tem nenhum sintoma usa o kambô para reforçar a imunidade.</p>
 							<p>Após a aplicação, é indescritível o estado de conscientização e clareza de pensamentos; a sensação de harmonia e de felicidade é visível; os sonhos, a percepção e a intuição melhoram; a autoestima retorna.</p>
