--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <meta name="author" content="">
 
 <title>Instituto Luz e Caridade e Instituto Viva Vida</title>
+<link rel="icon" type="image/png" href="http://www.clcecvv.com.br/img/icon32.ico" />
 
 <!-- Bootstrap Core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -30,6 +31,8 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+
 
 <script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -112,32 +115,31 @@
 				<div class="col-lg-12 text-center">
 					<div style="width:100%; max-width: 700px; margin: 0 auto">
 						<h2>Próximos Rituais</h2>
-						<p>&nbsp;</p>
-						<h3 style="text-align:center">Segunda - 16 de Maio - das 20h30 até 00h30</h3>
-						<img width="100%" src="img/rituais/ceuvivavida-20160516.jpg">
 					</div>
 				</div>
 				<p>&nbsp;</p>
-				<div class="col-lg-12 text-center intro-text">
+				<div class="proximo-ritual col-lg-12 text-center intro-text" data="2016/05/16">
+					<h3 style="text-align:center">Segunda - 16 de Maio - das 20h30 até 00h30</h3>
+					<img width="100%" src="img/rituais/ceuvivavida-20160516.jpg">
 					<div class="intro-lead-in">Sagrada Ayahuasca e Medicina do Rapé</div>
 					<div class="col-lg-12 text-center">
 						<p>Ritual de Curas e Bênçãos e Medicina do Rapé em 16/05 as 20:30 horas (pontualmente).</p>
 						<p>O irmão que desejar realizar a cerimônia do rapé será R$ 10,00</p>
 						
 					</div>
+					<p>&nbsp;</p>
+					<p>&nbsp;</p>
 				</div>
-				<p>&nbsp;</p>
-				<p>&nbsp;</p>
-				<div class="col-lg-12 text-center">
+				<div class="proximo-ritual col-lg-12 text-center" data="2016/05/18">
 					<div style="width:100%; max-width: 700px; margin: 0 auto">
 						<h3 style="text-align:center">Quarta - 18 de Maio - das 20h30 até 22h30 - Exclusivo para mulheres</h3>
 						<p style="text-align:center">Clique na imagem para ver mais</p>
 						<a href="#portfolioSagradoFemininoEncontro" class="portfolio-link" data-toggle="modal"><img width="100%" src="img/rituais/sagrado_feminino_1805.jpg"></a>
 					</div>
+					<p>&nbsp;</p>
+					<p>&nbsp;</p>
 				</div>
-				<p>&nbsp;</p>
-				<p>&nbsp;</p>
-				<div class="col-lg-12 text-center">
+				<div class="proximo-ritual col-lg-12 text-center" data="2016/06/18">
 					<div style="width:100%; max-width: 700px; margin: 0 auto">
 						<h3 style="text-align:center">Sábado - 18 de Junho - das 8h00 até 23h00</h3>
 						<img width="100%" src="img/rituais/Vivencia Xamanica 20160618.jpg">
@@ -1028,7 +1030,21 @@
 
 	<!-- Custom Theme JavaScript -->
 	<script src="js/agency.js"></script>
-
+	<script>
+		$(document).ready(function(){
+		    $(".proximo-ritual").each(function(index, value) {
+		    	console.log(value);
+		    	var hoje = new Date();
+		    	var data = new Date(value.getAttribute("data"));
+		    	data.setDate(data.getDate() + 1); //Adicionando 1 dia
+				if (hoje > data) {
+		    		console.log(hoje + " - " + data);
+		    		$(value).hide();
+				}
+	
+		    });
+		});
+	</script>
 </body>
 
 </html>
