--- a/index.html
+++ b/index.html
@@ -340,6 +340,36 @@
 								</div>
 							</div>
 						</li>
+						<li>
+							<div class="timeline-image">
+								<a href="#portfolioRape" class="portfolio-link" data-toggle="modal"><img class="img-circle img-responsive" src="img/rituais/ritual_rape_20160503_icon.jpg" alt=""></a>
+							</div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h4>Rapé</h4>
+									<h4 class="subheading">18 de Junho de 2016</h4>
+								</div>
+								<div class="timeline-body">
+									<p class="text-muted">O rapé (do francês râper, "raspar") é o tabaco (ou fumo) em pó para inalar.</p>
+									<p class="text-muted">Clique na imagem para ver mais!</p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted">
+							<div class="timeline-image">
+								<a href="#portfolioSananga" class="portfolio-link" data-toggle="modal"><img class="img-circle img-responsive" src="img/rituais/sananga.jpg" alt=""></a>
+							</div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h4>Sananga</h4>
+									<h4 class="subheading">18 de Junho de 2016</h4>
+								</div>
+								<div class="timeline-body">
+									<p class="text-muted">Sananga, é um arbusto das regiões amazônicas, utilizado pelos índios nativos caxinawás e outras tribos</p>
+									<p class="text-muted">Clique na imagem para ver mais!</p>
+								</div>
+							</div>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -915,7 +945,7 @@
 	</div>
 
 	<!-- Portfolio Modal 4 -->
-	<div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="portfolio-modal modal fade" id="portfolioSananga" tabindex="-1" role="dialog" aria-hidden="true">
 		<div class="modal-content">
 			<div class="close-modal" data-dismiss="modal">
 				<div class="lr">
@@ -927,18 +957,29 @@
 					<div class="col-lg-8 col-lg-offset-2">
 						<div class="modal-body">
 							<!-- Project Details Go Here -->
-							<h2>Project Name</h2>
-							<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-							<img class="img-responsive img-centered" src="img/portfolio/golden-preview.png" alt="">
-							<p>
-								Start Bootstrap's Agency theme is based on Golden, a free PSD website template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Golden is a modern and clean one page
-								web template that was made exclusively for Best PSD Freebies. This template has a great portfolio, timeline, and meet your team sections that can be easily modified to fit your needs.
-							</p>
-							<p>
-								You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/golden-free-one-page-web-template/">FreebiesXpress.com</a>.
-							</p>
+							<h2>SANANGA</h2>
+							<p>Sananga, é um arbusto das regiões amazônicas, utilizado pelos índios nativos caxinawás e outras tribos.</p>
+							<p>Do interior de sua raiz, é estraído um sumo em decocção, o qual é utilizado para a cura das panemas, doenças espirituais segundo os índios.</p>
+							<p>Seu princípio ativo é a Ibogaína, uma poderosa substancia de poder que se ingerida leva os índio à um estado de transe profundo para o contato com o mundo dos espíritos.</p>
+							<p>Porém, na medicina tradicional do Sananga, ele é utilizado como colírio.</p>
+							<p>Os índios guerreiros, antes de irem para a caça, administram uma gota em cada olho, fazendo com que sua percepção fique aguçada e perceba movientos sutis na densa floresta.</p>
+							<p>O que ocorre é que o Sananga trabalha com duas vertentes energéticas de cura: a Física e a Espiritual.</p>
+							<p>Acredita-se que o "Espirito do Sananga", ou seja, a energia e inteligência, análoga ao princípio ativo do sumo desta poderosa erva, atua diretamente na causa original da doença, nos processos chamados psico-somáticos.</p>
+							<p>As doenaças psico-somáticas são de origem psíquicas, mas ao se potencializarem se manifestam no SOMA, ou melhor dizendo, no corpo físico.</p>
+							<p>Os olhos são as janelas da Alma, onde tudo o que vemos, e projetamos está lá guardado, inclusive nossa história kármica.</p>
+							<p>Então o Espírito do Sananga faz uma verificação dos padrões energéticos em desequilíbrio, e vai diluindo essas forças que se constituem nas panemas.</p>
+							<p>O resultado após a aplicação é um equilírbio da alma em sintonia com essa força da natureza, uma expanção da força visual espiritual, ou do AJNA CHAKRA, a terceira visão, a visão interior, e também uma melhora na fisiologia ocular.</p>
+							<p>O Sananga é indicado em casos de doença como: Glaucoma, catarata, miopia, astigmatismo, hipermetropia, distrofias, alterações das cores, entre outras. </p>
+							<p>Há casos de pessoas que foram curadas de miopia com uma aplicação, e houve melhora na percepção das cores imediatamente.</p>
+							<p>O Sananga tem sido explorado de forma controversa pelos Europeus, que vem na terra amazônica e levam o produto como remédio para fora, porém a forma correta de se utilizar é dentro de um trabalho voltado para a evolução espiritual, pois ele, usado de forma errada, se constitui numgrande causador de problemas na vida da pessoa.</p>
+							<p>A forma de aplicação é a seguinte: de uma à 3 gotas em cada olho.</p>
+							<p>A pessoa sentirá uma forte vibração, onde poderá ocorrer diversos graus de ardência dependendo de como estiver a situação espiritual da pessoa. Com o tempo, a pessoa vai se alinhando ao espírtio do sananga e sentirá menos o ardor, quando sua visão já terá tido um ganho imenso.</p>
+							<p>Após o ardor que dura uns 3 minutos, as cores se tornam mais nítidas há uma melhora significante nos padrões da visão.</p>
+							<p>Alguns tratamentos são milagrosos, imediatos, e outros a longo prazo, mas não menos milagrosos que o primeiro.</p>
+							<p>É uma experiência diferente, única, de tranformação espiritual e de visão, num sentido mais aplo da palavra.</p>
+							<p>Aqueles que necessitarem da cura dessa medicina por alguma doença, ou por necessidade de aprmoramento espiritual estão convidados a participar da Cura Xamânica do Sananga. </p>
 							<button type="button" class="btn btn-primary" data-dismiss="modal">
-								<i class="fa fa-times"></i> Close Project
+								<i class="fa fa-times"></i> Fechar Sananga
 							</button>
 						</div>
 					</div>
@@ -948,7 +989,7 @@
 	</div>
 
 	<!-- Portfolio Modal 5 -->
-	<div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="portfolio-modal modal fade" id="portfolioRape" tabindex="-1" role="dialog" aria-hidden="true">
 		<div class="modal-content">
 			<div class="close-modal" data-dismiss="modal">
 				<div class="lr">
@@ -960,18 +1001,14 @@
 					<div class="col-lg-8 col-lg-offset-2">
 						<div class="modal-body">
 							<!-- Project Details Go Here -->
-							<h2>Project Name</h2>
-							<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-							<img class="img-responsive img-centered" src="img/portfolio/escape-preview.png" alt="">
-							<p>
-								Escape is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Escape is a one page web template that was designed with agencies in mind. This
-								template is ideal for those looking for a simple one page solution to describe your business and offer your services.
-							</p>
-							<p>
-								You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/escape-one-page-psd-web-template/">FreebiesXpress.com</a>.
-							</p>
+							<h2>Rapé</h2>
+							<p>A palavra rapé vem do francês “râper” (raspar). Basicamente, é tabaco moído, raspado ou pilado, inalado ou soprado via nasal. No norte do Brasil, povos indígenas usam o rapé há séculos (antes da chegada do homem branco). Algumas etnias (tais como a Huni Kuin – Kaxinawa e a Yawanawa) tem o rapé como uma medicina associada ao uso terapêutico e espiritual. </p>
+							<p>O tabaco utilizado para a elaboração do rapé é cultivado de maneira orgânica pelo próprio povo (e geralmente rezado em todas suas fases: plantio, cultivo, colheita, preparo). </p>
+							<p>O rapé neste caso é constituído de tabaco (pilado) e cinza (pau pereira, murici, cumaru, canela de velho etc). Para esses povos, o rapé é uma medicina que contém um espírito com grande poder, trazendo curas, proteção e afastando todo tipo de males. Outro ponto a salientar é que o rapé não é aspirado, mas sim soprado nas vias nasais através de uma espécie de canudo, o “tepi” ou autoaplicado através do “kuripe”. </p>
+							<p>Atualmente, há uma maior difusão do uso do rapé para fins ritualísticos, não só nas tribos, mas também pelo Brasil afora – por associações religiosas, grupos espirituais, terapeutas xamânicos, entre outros.</p>
+							<p>As etnias Huni Kuin - Kaxinawá e Yawanawa, tradicionalmente usam o rapé em rituais com Ayahuasca (Hoasca, Uni, Nixi pae, Santo Daime).</p>
 							<button type="button" class="btn btn-primary" data-dismiss="modal">
-								<i class="fa fa-times"></i> Close Project
+								<i class="fa fa-times"></i> Fechar Rapé
 							</button>
 						</div>
 					</div>
