--- a/index.html
+++ b/index.html
@@ -118,24 +118,10 @@
 					</div>
 				</div>
 				<p>&nbsp;</p>
-				<div class="proximo-ritual col-lg-12 text-center intro-text" data="2016/05/16">
-					<h3 style="text-align:center">Segunda - 16 de Maio - das 20h30 até 00h30</h3>
-					<img width="100%" src="img/rituais/ceuvivavida-20160516.jpg">
-					<div class="intro-lead-in">Sagrada Ayahuasca e Medicina do Rapé</div>
-					<div class="col-lg-12 text-center">
-						<p>Ritual de Curas e Bênçãos e Medicina do Rapé em 16/05 as 20:30 horas (pontualmente).</p>
-						<p>O irmão que desejar realizar a cerimônia do rapé será R$ 10,00</p>
-						
-					</div>
-					<p>&nbsp;</p>
-					<p>&nbsp;</p>
-				</div>
-				<div class="proximo-ritual col-lg-12 text-center" data="2016/05/18">
-					<div style="width:100%; max-width: 700px; margin: 0 auto">
-						<h3 style="text-align:center">Quarta - 18 de Maio - das 20h30 até 22h30 - Exclusivo para mulheres</h3>
-						<p style="text-align:center">Clique na imagem para ver mais</p>
-						<a href="#portfolioSagradoFemininoEncontro" class="portfolio-link" data-toggle="modal"><img width="100%" src="img/rituais/sagrado_feminino_1805.jpg"></a>
-					</div>
+				<div class="proximo-ritual col-lg-12 text-center intro-text" data="2016/05/28">
+					<h3 style="text-align:center">Sábado - 28 de Maio - às 21h00 (pontualmente)</h3>
+					<img width="100%" src="img/rituais/ayahuasca-20160528.jpg">
+					<div class="intro-lead-in">Ritual de Curas e Bençãos com a Sagrada Ayahuasca</div>
 					<p>&nbsp;</p>
 					<p>&nbsp;</p>
 				</div>
@@ -254,14 +240,13 @@
 							</div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h4>Segunda, 16 de Maio</h4>
+									<h4>Sábado, 28 de Maio</h4>
 									<h4 class="subheading">Vivência Xamânica</h4>
-									<h4 class="subheading">Sagrada Ayahuasca e Medicina do Rapé</h4>
+									<h4 class="subheading">Sagrada Ayahuasca</h4>
 								</div>
 								<div class="timeline-body">
 									<p class="text-muted">
-										Início às 20h30<br />
-										Portão aberto às 19h30<br />
+										Início às 21h00<br />
 										Energia de Troca R$ 50,00
 									</p>
 								</div>
@@ -288,7 +273,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h4>Sagrado Feminino</h4>
-									<h4 class="subheading">Quarta - 18 de Maio - das 20h30 até 22h30 - Exclusivo para mulheres</h4>
+									<h4 class="subheading">Sem data prevista</h4>
 								</div>
 								<div class="timeline-body">
 									<p class="text-muted">Esse estilo de vida oferece ensinamentos sobre nosso corpo, nosso emocional e nossos ciclos femininos, e ainda orienta de que forma podemos harmonizá-los com a natureza.</p>
