--- a/index.html
+++ b/index.html
@@ -118,13 +118,15 @@
 					</div>
 				</div>
 				<p>&nbsp;</p>
-				<div class="proximo-ritual col-lg-12 text-center intro-text" data="2016/05/28">
-					<h3 style="text-align:center">Sábado - 28 de Maio - às 21h00 (pontualmente)</h3>
-					<img width="100%" src="img/rituais/ayahuasca-20160528.jpg">
-					<div class="intro-lead-in">Ritual de Curas e Bençãos com a Sagrada Ayahuasca</div>
-					<p>&nbsp;</p>
-					<p>&nbsp;</p>
+				<div class="proximo-ritual col-lg-12 text-center intro-text" data="2016/06/15">
+					<div style="width:100%; max-width: 700px; margin: 0 auto">
+					<h3 style="text-align:center">Quarta - 15 de Junho - das 20h30 às 22h30</h3>
+					<img width="100%" src="img/rituais/sagrado_feminino_20160615.jpg">
+					<div class="intro-lead-in">2º Encontro - Sagrado Feminino</div>
+					</div>
 				</div>
+				<p>&nbsp;</p>
+				<p>&nbsp;</p>
 				<div class="proximo-ritual col-lg-12 text-center" data="2016/06/18">
 					<div style="width:100%; max-width: 700px; margin: 0 auto">
 						<h3 style="text-align:center">Sábado - 18 de Junho - das 8h00 até 23h00</h3>
@@ -178,47 +180,6 @@
 				</div>
 			</div>
 		</div>
-		<div class="container" style="display:none">
-			<div class="row">
-				<div class="col-lg-12 text-center">
-					<h2>Leitura</h2>
-					<p class="large text-muted">&nbsp;</p>
-					<h3>VIVER AGORA</h3>
-					<p class="large text-muted">Este é o teu momento de viver intensamente a realidade da vida.</p>
-					<p class="large text-muted">Desnecessário recordar que, agora, o teu momento presente é relevante para a aquisição dos bens inestimáveis para o Espírito eterno.</p>
-					<p class="large text-muted">Há muito desperdício de tempo, que se aplica nas considerações do passado como em torno das ansiedades do futuro.</p>
-					<div id="divleitura1" class="collapse">
-					<p class="large text-muted">A tomada de consciência é um trabalho de atualidade, de valorização das horas, de realização constante.</p>
-					<p class="large text-muted">A vida é para ser vivida agora.</p>
-					<p class="large text-muted">Postergar experiências significa prejuízo em crescimento na economia da vida.</p>
-					<p class="large text-muted">Antecipar ocorrências representa precipitação de fatos que, talvez, não sucederão, conforme agora tomam curso.</p>
-					<p class="large text-muted">As emoções canalizadas em relação ao passado ou ao futuro dissipam ou gastam a energia vital, que deve ser utilizada na ação do momento.</p>
-					<p class="large text-muted">&nbsp;</p>
-					<p class="large text-muted">&nbsp;</p>
-					<p class="large text-muted">Se vives recordando o passado ou ansiando pelo futuro perdes a contribuição do presente, praticamente nada reservando para hoje.</p>
-					<p class="large text-muted">O momento atual é a vida, que resulta das atividades pretéritas e elabora o programa do porvir.</p>
-					<p class="large text-muted">Encoraja-te a viver hoje, sentindo cada instante e valorizando-o mediante a consciência das bênçãos que se encontram à tua disposição.</p>
-					<p class="large text-muted">A vida é um sublime dom de Deus.</p>
-					<p class="large text-muted">Naturalmente, quando recebes um presente de alguém sentes o desejo irrefreável de agradecer, de louvar, de bendizer.</p>
-					<p class="large text-muted">Desse modo, agradece a Deus o sublime legado, que é a tua vida, por Ele concedido.</p>
-					<p class="large text-muted">&nbsp;</p>
-					<p class="large text-muted">&nbsp;</p>
-					<p class="large text-muted">Deus, nosso Pai de infinita justiça e bondade:</p>
-					<p class="large text-muted">Como é bom agradecer pela vida, por esta oportunidade sem igual de fazer parte de Teu Universo resplandecente.</p>
-					<p class="large text-muted">Brilha meu coração quando, ao observar o cântico da Tua natureza, percebe que tudo é feliz e cumpre seu papel resignadamente.</p>
-					<p class="large text-muted">Brilha meu coração quando compreendo Tuas leis perfeitas a reger o cosmo; das leis que equilibram os corpos no espaço às leis morais que harmonizam as relações humanas.</p>
-					<p class="large text-muted">Brilha meu coração ao saber que todos humanos irão para a felicidade e que, embora acampemos agora em campos de aflição e dúvida, o passar das eras está construindo em nós as bases de dias felizes.</p>
-					<p class="large text-muted">Brilha meu coração, hoje, agora, enquanto me dou conta de Ti, de mim, de meu próximo e percebo que estamos todos entrelaçados, e que a felicidade depende de como cuido de Ti, de mim e de meu próximo.</p>
-					<p class="large text-muted">Brilha meu coração que é Teu, Pai amado. E a luz que ele emite é a gratidão da criatura para com o Seu Criador.</p>
-					<p class="large text-muted">É um despertar decisivo para a verdadeira vida, agora, aqui, na imensidão de minha alma encantada ao descobrir-Te, gradual e definitivamente.</p>
-					<p class="large text-muted">&nbsp;</p>
-					<p class="large text-muted">&nbsp;</p>
-					<p class="large text-muted">Excelente Semana Planeta !!</p>
-					</div>
-					<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#divleitura1">Ler Mais</button>
-				</div>
-			</div>
-		</div>
 	</section>
 
 	<!-- About Section -->
@@ -235,12 +196,11 @@
 					<ul class="timeline">
 						<li>
 							<div class="timeline-image">
-								<a href="#ayahuasca20151031" class="portfolio-link" data-toggle="modal"> <img class="img-circle img-responsive" src="img/rituais/ritual_rape_20160503_icon.jpg" alt="">
-								</a>
+								<img class="img-circle img-responsive" src="img/rituais/ayahuasca_droga_icon.jpg" alt="">
 							</div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h4>Sábado, 28 de Maio</h4>
+									<h4>Sábado, 18 de Junho</h4>
 									<h4 class="subheading">Vivência Xamânica</h4>
 									<h4 class="subheading">Sagrada Ayahuasca</h4>
 								</div>
@@ -273,7 +233,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h4>Sagrado Feminino</h4>
-									<h4 class="subheading">Sem data prevista</h4>
+									<h4 class="subheading">Quarta - 15 de Junho</h4>
 								</div>
 								<div class="timeline-body">
 									<p class="text-muted">Esse estilo de vida oferece ensinamentos sobre nosso corpo, nosso emocional e nossos ciclos femininos, e ainda orienta de que forma podemos harmonizá-los com a natureza.</p>
