--- a/index.html
+++ b/index.html
@@ -133,6 +133,19 @@
 						<img width="100%" src="img/rituais/Vivencia Xamanica 20160618.jpg">
 					</div>
 				</div>
+				<p>&nbsp;</p>
+				<p>&nbsp;</p>
+				<div class="proximo-ritual col-lg-12 text-center" data="2016/06/25">
+					<div style="width:100%; max-width: 700px; margin: 0 auto">
+						<h3 style="text-align:center">Sábado - 25 de Junho - às 16h</h3>
+						<p>Arraiá no Terreno - Festa Junina</p>
+						<p>Convidamô a todos,  a participá do nosso Arraiá !! </p>
+						<p>Nóis vai começa às 16:00 horas, vai tê fogueira e precisa chegá a caráter, vai tê cadeia, bingo, quadrilha e inté correio elegante, vai tê também quentão de gengibre e todos tem que participá !!!</p>
+						<p>Num esquece de jeito nenhum de levá o pratinho de doce ou salgado, precisa de descartáveis copo, prato, colher e galfo (ahhh) num esquece do gualdanapo e de seu refrigerante.</p>
+						<p>Contamô com ocê lá !!!</p>
+						<img width="100%" src="img/rituais/festa-junina-2016.jpeg">
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
