retirado kambo e sananga

--- a/index.html
+++ b/index.html
@@ -213,12 +213,12 @@
 							</div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h4>Sábado, 18 de Junho</h4>
+									<h4>Sem data prevista</h4>
 									<h4 class="subheading">Vivência Xamânica</h4>
 									<h4 class="subheading">Sagrada Ayahuasca</h4>
 								</div>
 								<div class="timeline-body">
-									<p class="text-muted">
+									<p class="text-muted hidden">
 										Início às 21h00<br />
 										Energia de Troca R$ 50,00
 									</p>
@@ -246,7 +246,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h4>Sagrado Feminino</h4>
-									<h4 class="subheading">Quarta - 15 de Junho</h4>
+									<h4 class="subheading">Sem data prevista</h4>
 								</div>
 								<div class="timeline-body">
 									<p class="text-muted">Esse estilo de vida oferece ensinamentos sobre nosso corpo, nosso emocional e nossos ciclos femininos, e ainda orienta de que forma podemos harmonizá-los com a natureza.</p>
@@ -283,7 +283,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="timeline-inverted">
+						<li class="timeline-inverted hidden">
 							<div class="timeline-image">
 								<a href="#portfolioKambo" class="portfolio-link" data-toggle="modal"><img class="img-circle img-responsive" src="img/rituais/kambo/kambo_icon.jpg" alt=""></a>
 							</div>
@@ -298,14 +298,14 @@
 								</div>
 							</div>
 						</li>
-						<li>
+						<li class="timeline-inverted">
 							<div class="timeline-image">
 								<a href="#portfolioRape" class="portfolio-link" data-toggle="modal"><img class="img-circle img-responsive" src="img/rituais/ritual_rape_20160503_icon.jpg" alt=""></a>
 							</div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h4>Rapé</h4>
-									<h4 class="subheading">18 de Junho de 2016</h4>
+									<h4 class="subheading">Sem data prevista</h4>
 								</div>
 								<div class="timeline-body">
 									<p class="text-muted">O rapé (do francês râper, "raspar") é o tabaco (ou fumo) em pó para inalar.</p>
@@ -313,7 +313,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="timeline-inverted">
+						<li class="timeline-inverted hidden">
 							<div class="timeline-image">
 								<a href="#portfolioSananga" class="portfolio-link" data-toggle="modal"><img class="img-circle img-responsive" src="img/rituais/sananga.jpg" alt=""></a>
 							</div>
