Ayahuasca 30 de Julho

--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
 					</div>
 				</div>
 				<p>&nbsp;</p>
-				<div class="proximo-ritual col-lg-12 text-center intro-text" data="2016/06/15">
+				<div class="proximo-ritual col-lg-12 text-center intro-text" data="2016/07/30">
 					<div style="width:100%; max-width: 700px; margin: 0 auto">
-					<h3 style="text-align:center">Quarta - 15 de Junho - das 20h30 às 22h30</h3>
-					<img width="100%" src="img/rituais/sagrado_feminino_20160615.jpg">
-					<div class="intro-lead-in">2º Encontro - Sagrado Feminino</div>
+					<h3 style="text-align:center">Sábado - 30 de Julho - a partir das 21h00</h3>
+					<img width="100%" src="img/rituais/ayahuasca-20160730.jpeg">
+					<div class="intro-lead-in">Ayahuasca e Meditação</div>
 					</div>
 				</div>
 				<p>&nbsp;</p>
@@ -213,7 +213,7 @@
 							</div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h4>Sem data prevista</h4>
+									<h4>30 de Julho</h4>
 									<h4 class="subheading">Vivência Xamânica</h4>
 									<h4 class="subheading">Sagrada Ayahuasca</h4>
 								</div>
