--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 									<h4 class="subheading">Sagrada Ayahuasca</h4>
 								</div>
 								<div class="timeline-body">
-									<p class="text-muted hidden">
+									<p class="text-muted">
 										Início às 21h00<br />
 										Energia de Troca R$ 50,00
 									</p>
