texto ritual 30 de julho

--- a/index.html
+++ b/index.html
@@ -120,9 +120,27 @@
 				<p>&nbsp;</p>
 				<div class="proximo-ritual col-lg-12 text-center intro-text" data="2016/07/30">
 					<div style="width:100%; max-width: 700px; margin: 0 auto">
-					<h3 style="text-align:center">Sábado - 30 de Julho - a partir das 21h00</h3>
-					<img width="100%" src="img/rituais/ayahuasca-20160730.jpeg">
-					<div class="intro-lead-in">Ayahuasca e Meditação</div>
+						<h3 style="text-align:center">Sábado - 30 de Julho - a partir das 21h00</h3>
+						<img width="100%" src="img/rituais/ayahuasca-20160730.jpeg">
+						<div class="intro-lead-in">
+							<p><h3>Ayahuasca e Meditação</h3></p>
+							<p>Com Amor,</p>
+							<p>Convidamos a todos a mais um maravilho Ritual de Curas e Bençãos com a Sagrada Ayahuasca, Sábado 30/07/2016 às 21:00 horas pontualmente, conforme convite em anexo.</p>
+							<p>Os portões estarão abertos a partir das 19:00 horas e fechados às 20:45 horas.</p>
+							<p>No site maiores informações sobre as normas, horários de carona e vestimenta adequada de homens e mulheres para um Ritual Espiritual.</p>
+							<p>Na Serra a temperatura cai bastante, pedimos que levem agasalho, colchonete e cobertor.</p>
+							<p>No final do Ritual é de costume fazermos uma Confraternização, sintam em seu coração e tragam frutas, suco ou alimento de seu agrado.</p>
+							<p>Nossa casa precisa de velas, incensos e papel higiênico pedimos sua colaboração.</p>
+							<p><b>Aviso Importante:</b></p>
+							<p>A Instituição Fraternidade CCA, cuida de 150 crianças carentes, além de muitas famílias que vivem ao redor numa situação de extrema pobreza, como exemplo : vivendo com esgoto aberto, sem alimentos, roupas, com frio e quem sabe até mesmo sem esperança.</p>
+							<p>Esperamos neste momento tocar o seu coração e pedir que doem um agasalho, uma cesta básica, 1 litro de leite, Aquela mantinha velha que seja, mas que fará a diferença para aquele que não tem nada.</p>
+							<p>Com toda nossa gratidão.</p>
+							<p><b>Terreno:</b></p>
+							<p>Rua Dom Pedro de Alcântara, 430</p>
+							<p>Mairiporã - São Paulo - Antiga Rua 01</p>
+							<p>Sempre Gratos,</p>
+							<p>Céu Luz e Caridade  e Céu Viva Vida</p>
+						</div>
 					</div>
 				</div>
 				<p>&nbsp;</p>
