--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
 				</div>
 				<p>&nbsp;</p>
 				<p>&nbsp;</p>
-				<div class="proximo-ritual col-lg-12 text-center" data="2016/06/18">
+				<div class="proximo-ritual col-lg-12 text-center" data="2016/08/17">
 					<div style="width:100%; max-width: 700px; margin: 0 auto">
-						<h3 style="text-align:center">Sábado - 18 de Junho - das 8h00 até 23h00</h3>
-						<img width="100%" src="img/rituais/Vivencia Xamanica 20160618.jpg">
+						<h3 style="text-align:center">Quarta - 17 de Agosto - das 20h30 até 22h30</h3>
+						<img width="100%" src="img/rituais/sagrado_feminino_20160817.jpeg">
 					</div>
 				</div>
 				<p>&nbsp;</p>
@@ -231,12 +231,12 @@
 							</div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h4>30 de Julho</h4>
+									<h4 class="hide">Sem Data</h4>
 									<h4 class="subheading">Vivência Xamânica</h4>
 									<h4 class="subheading">Sagrada Ayahuasca</h4>
 								</div>
 								<div class="timeline-body">
-									<p class="text-muted">
+									<p class="text-muted hide">
 										Início às 21h00<br />
 										Energia de Troca R$ 50,00
 									</p>
@@ -264,7 +264,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h4>Sagrado Feminino</h4>
-									<h4 class="subheading">Sem data prevista</h4>
+									<h4 class="subheading">Quarta - 17 de Agosto</h4>
 								</div>
 								<div class="timeline-body">
 									<p class="text-muted">Esse estilo de vida oferece ensinamentos sobre nosso corpo, nosso emocional e nossos ciclos femininos, e ainda orienta de que forma podemos harmonizá-los com a natureza.</p>
