Ayahuasca 03 de Setembro e Texto Sol das Almas

--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
 					</div>
 				</div>
 				<p>&nbsp;</p>
-				<div class="proximo-ritual col-lg-12 text-center intro-text" data="2016/07/30">
+				<div class="proximo-ritual col-lg-12 text-center intro-text" data="2016/09/03">
 					<div style="width:100%; max-width: 700px; margin: 0 auto">
-						<h3 style="text-align:center">Sábado - 30 de Julho - a partir das 21h00</h3>
-						<img width="100%" src="img/rituais/ayahuasca-20160730.jpeg">
+						<h3 style="text-align:center">Sábado - 03 de Setembro - a partir das 21h00</h3>
+						<img width="100%" src="img/rituais/ayahuasca-20160903.jpeg">
 						<div class="intro-lead-in">
 							<p><h3>Ayahuasca e Meditação</h3></p>
 							<p>Com Amor,</p>
@@ -176,11 +176,41 @@
 				<div class="col-lg-12 text-center">
 					<h2>Leitura</h2>
 					<p class="large text-muted">&nbsp;</p>
+					<h3>Sol das Almas</h3>
+						<p class="large text-muted">É pelo amor, sol das almas, que Deus mais eficazmente atua no mundo.</p>
+						<p class="large text-muted">Já notamos como um belo dia de sol consegue nos fazer bem? A temperatura pode estar baixa, mostrando os prenúncios do inverno, mas mesmo assim, o brilho intenso da estrela solar consegue nos trazer ânimo e esperança.</p>
+						<div id="divleitura1" class="collapse">
+							<p class="large text-muted">Algum poeta apaixonado poderia dizer que os raios solares são como um abraço do Criador, fazendo-nos acreditar que estamos seguros, que estamos protegidos.</p>
+							<p class="large text-muted">Mas é através de um outro sol, um sol interior, que o Pai se mostra mais presente em nossas vidas: o amor.</p>
+							<p class="large text-muted">O amor encontrado no coração do homem, manifestado em seus pensamentos e ações; o amor,condição indispensável, para que tudo na vida faça sentido e tenha valor.</p>
+							<p class="large text-muted">Paulo de Tarso, em sua carta ao povo da cidade de Corinto, afirmava que se não houvesse amor em suas ações, elas não teriam validade, e que se não existisse amor em sua alma, ele nada seria.</p>
+							<p class="large text-muted">O Apóstolo ainda trazia a aplicação prática desse ensino, dizendo que o amor é paciente, mostrando-nos a virtude da paciência, essa disposição íntima que nos faz esperar com calma, que nos auxilia a evitar a precipitação, que não é passiva, mas é atuante e dinâmica.</p>
+							<p class="large text-muted">O amor é benigno, isto é, ele deve irradiar de nossa casa interior, para iluminar outros lares através da caridade, da intenção de fazer felizes aqueles que estão ao nosso redor.</p>
+							<p class="large text-muted">O amor não arde em ciúmes, não guarda o sentimento de posse sobre ninguém, pois sabe que não possuímos as pessoas, e que se as amamos, devemos libertá-las.</p>
+							<p class="large text-muted">O amor não se orgulha, nem se ensoberbece, é humilde, e faz com que saibamos o nosso devido lugar, conhecendo nossas imperfeições e reconhecendo as dificuldades do próximo, jamais nos proclamando melhores que alguém.</p>
+							<p class="large text-muted">O amor não se conduz inconvenientemente, é delicado, sensível, e se expressa nas pequenas coisas, nas pequenas ações, que são invisíveis aos olhos do mundo, mas que para Deus demonstram nosso interesse e preocupação com as outras pessoas.</p>
+							<p class="large text-muted">O amor não procura seus interesses, é espontâneo, não age visando a vantagem, a recompensa. Ele simplesmente ama, se doa, sem exigir retorno.</p>
+							<p class="large text-muted">O amor não se exaspera, é tolerante, compreensivo, e sabe que necessitamos compreender as dificuldades alheias, pois todos, sem exceção, ainda as temos.</p>
+							<p class="large text-muted">O amor não se ressente do mal, perdoa. Não permite que o veneno do ressentimento prejudique nossa saúde física e espiritual.</p>
+							<p class="large text-muted">E, finalmente, Paulo de Tarso nos ensina que o amor não se alegra com a injustiça, mas regozija-se com a verdade, mostrando-nos que devemos ser defensores da verdade, da sinceridade, mas não dessa sinceridade dura que atira as verdades no rosto dos outros - deixando assim de ser virtude.</p>
+							<p class="large text-muted">A verdade deve ser revelada com psicologia, com cautela, visando construir, e não destruir o semelhante. </p>
+							<p class="large text-muted">*  *  *</p>
+							<p class="large text-muted">O amor decompõe-se em muitas cores, em muitas virtudes.</p>
+							<p class="large text-muted">É este sol das almas que buscamos, cada um de uma forma, cada um a seu tempo. Sempre amparados pelo astro de primeira grandeza que é Jesus, que veio à Terra e permaneceu nestes ares para nos guiar aos caminhos que nos conduzirão ao Criador.</p>
+						</div>
+					<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#divleitura1">Ler Mais</button>
+				</div>
+			</div>
+		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<p class="large text-muted">&nbsp;</p>
 					<h3>Quando começa o amor?</h3>
 						<p class="large text-muted">Olhando esses amores que andam pelo mundo, dando demonstrações tão extraordinárias da excelência do sentimento, nos perguntamos: Quando começamos a amar?</p>
 						<p class="large text-muted">Nascemos no seio de uma família e amamos nossos pais. Convivemos com irmãos, familiares próximos e vamos dilatando essa nossa capacidade de amar.</p>
 						<p class="large text-muted">Comovente é registrar o amor de irmãos que se alonga no tempo. Irmãos que se dedicam a outros irmãos.</p>
-					<div id="divleitura1" class="collapse">
+					<div id="divleitura2" class="collapse">
 						<p class="large text-muted">Crianças que, mal começam a falar e dar conta de si próprias, expressam extremos cuidados pelo irmão com necessidades especiais.</p>
 						<p class="large text-muted">Algumas chegam a dizer, com todas as palavras: Sempre vou cuidar de você!</p>
 						<p class="large text-muted">E se o dizem, o fazem. Os fatos, todos os dias, nos trazem notícias de irmãos dedicados. Irmãos que chegam a renunciar a suas próprias vidas para atender aquele que necessita de atenção maior.</p>
@@ -207,7 +237,7 @@
 						<p class="large text-muted">Doces mistérios do amor que se perpetua no tempo...</p>
 						<p class="large text-muted">Excelente Semana !!</p>
 					</div>
-					<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#divleitura1">Ler Mais</button>
+					<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#divleitura2">Ler Mais</button>
 				</div>
 			</div>
 		</div>
@@ -231,7 +261,7 @@
 							</div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h4 class="hide">Sem Data</h4>
+									<h4>03 de Setembro - Sábado</h4>
 									<h4 class="subheading">Vivência Xamânica</h4>
 									<h4 class="subheading">Sagrada Ayahuasca</h4>
 								</div>
@@ -264,7 +294,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h4>Sagrado Feminino</h4>
-									<h4 class="subheading">Quarta - 17 de Agosto</h4>
+									<h4 class="hide" class="hide subheading">Quarta - 17 de Agosto</h4>
 								</div>
 								<div class="timeline-body">
 									<p class="text-muted">Esse estilo de vida oferece ensinamentos sobre nosso corpo, nosso emocional e nossos ciclos femininos, e ainda orienta de que forma podemos harmonizá-los com a natureza.</p>
@@ -279,7 +309,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h4>Cachimbo Sagrado</h4>
-									<h4 class="subheading">Sem data prevista</h4>
+									<h4 class="hide subheading">Sem data prevista</h4>
 								</div>
 								<div class="timeline-body">
 									<p class="text-muted">O Cachimbo Sagrado é um dos três instrumentos mais sagrados do xamã, assim como o tambor e o maracá!</p>
@@ -294,7 +324,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h4>Tenda do Suor</h4>
-									<h4 class="subheading">Sem data prevista</h4>
+									<h4 class="hide subheading">Sem data prevista</h4>
 								</div>
 								<div class="timeline-body">
 									<p class="text-muted">Entrar em uma Tenda do Suor é nascer novamente. Nela ora-se afim de unir o espiritual ao mental.</p>
@@ -308,7 +338,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h4>Kambô</h4>
-									<h4 class="subheading">18 de Junho de 2016</h4>
+									<h4 class="hide subheading">18 de Junho de 2016</h4>
 								</div>
 								<div class="timeline-body">
 									<p class="text-muted">A técnica do Kambô é uma técnica indígena para tratamento de doenças!</p>
@@ -323,7 +353,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h4>Rapé</h4>
-									<h4 class="subheading">Sem data prevista</h4>
+									<h4 class="hide subheading">Sem data prevista</h4>
 								</div>
 								<div class="timeline-body">
 									<p class="text-muted">O rapé (do francês râper, "raspar") é o tabaco (ou fumo) em pó para inalar.</p>
